--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: GnuVario : The open-source/open-hardware variometer
+title: 'GnuVario : The open-source/open-hardware variometer'
 email: prunkdump@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   GnuVario is an open-source and open-hardware variometer
